--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>image-slider</h1>
+  <h1 style="color:blue;margin: 10px;text-align: center; font-weight: bold">Image Slider</h1>
+  <br /><br />
+  <div class="wrapper" style="max-width: 100%;position: relative">
+    <img src="Images/img1.png" style="width:100%" />
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
