--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a class="btn1" style="position:absolute;top:45%; left:5%" onclick="plusDivs(-1)"> <span id="btnl">&lt;</span></a>
     <a class="btn2" style="position:absolute;top:45%; right:5%" onclick="plusDivs(1)"> <span id="btnr">&gt;</span></a>
   </div>
+  <h6>gentlejackB &copy 2023</h6>
   <script src="main.js"></script>
 </body>
 
